--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,18 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+        <distributionManagement>
+          <repository>
+            <id>nexusrepo</id>
+            <name>time-tracker</name>
+            <url>http://65.0.100.31:8081/repository/time-tracker-release/</url>
+          </repository>
+          <snapshotRepository>
+            <id>nexusrepo</id>
+            <name>time-tracker-snapshot</name>
+            <url>http://65.0.100.31:8081/repository/time-tracker-snapshot/</url>
+          </snapshotRepository>
+        </distributionManagement> 
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
